--- a/app/src/main/res/layout/activity_profile_insurance.xml
+++ b/app/src/main/res/layout/activity_profile_insurance.xml
@@ -16,9 +16,7 @@
 
         <include
             layout="@layout/main_toolbar"/>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileInsurance"
@@ -46,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="48dp"
+        android:fontFamily="@font/open_sans_light"
         android:text="INSURANCE INFORMATION"
         android:textColor="@color/white"
         android:textSize="22dp"
