--- a/app/src/main/res/layout/activity_insurance_registration.xml
+++ b/app/src/main/res/layout/activity_insurance_registration.xml
@@ -21,7 +21,6 @@
                 android:layout_height="match_parent">
 
 
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/relative2"
                     android:layout_width="match_parent"
@@ -33,10 +32,11 @@
                         android:layout_width="293dp"
                         android:layout_height="27dp"
                         android:layout_marginStart="56dp"
-                        android:layout_marginTop="68dp"
+                        android:layout_marginTop="100dp"
                         android:autofillHints="emailAddress"
                         android:background="@drawable/rounded_corners"
                         android:ems="10"
+                        android:fontFamily="@font/open_sans"
                         android:hint="Insurance Provider"
                         android:inputType="text"
                         android:paddingLeft="10dp"
@@ -51,10 +51,11 @@
                         android:layout_width="293dp"
                         android:layout_height="27dp"
                         android:layout_marginStart="56dp"
-                        android:layout_marginTop="188dp"
+                        android:layout_marginTop="212dp"
                         android:autofillHints="emailAddress"
                         android:background="@drawable/rounded_corners"
                         android:ems="10"
+                        android:fontFamily="@font/open_sans"
                         android:hint="Policy Holder"
                         android:inputType="textEmailAddress"
                         android:paddingLeft="10dp"
@@ -69,10 +70,11 @@
                         android:layout_width="293dp"
                         android:layout_height="27dp"
                         android:layout_marginStart="56dp"
-                        android:layout_marginTop="128dp"
+                        android:layout_marginTop="156dp"
                         android:autofillHints="emailAddress"
                         android:background="@drawable/rounded_corners"
                         android:ems="10"
+                        android:fontFamily="@font/open_sans"
                         android:hint="Policy Number"
                         android:inputType="textEmailAddress"
                         android:paddingLeft="10dp"
@@ -90,7 +92,8 @@
                         android:layout_marginTop="18dp"
                         android:layout_marginEnd="177dp"
                         android:layout_marginBottom="604dp"
-                        android:text="Enter in your vehicle information below"
+                        android:fontFamily="@font/open_sans_light"
+                        android:text="Enter in your insurance information below"
                         android:textColor="@color/white"
                         android:textSize="20dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -103,11 +106,12 @@
                         android:id="@+id/saveInsuranceInfo"
                         android:layout_width="179dp"
                         android:layout_height="55dp"
-                        android:layout_marginTop="376dp"
+                        android:layout_marginTop="336dp"
                         android:layout_marginEnd="116dp"
+                        android:fontFamily="@font/open_sans"
                         android:text=" NEXT"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.887"
+                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
