--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,26 +15,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="20dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="84dp"
-                android:layout_marginTop="336dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+
 
             <!--Regular content-->
+
 
             <EditText
                 android:id="@+id/email2"
                 android:layout_width="293dp"
                 android:layout_height="27dp"
-                android:layout_marginStart="68dp"
-                android:layout_marginTop="224dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="220dp"
                 android:autofillHints="emailAddress"
                 android:background="@drawable/rounded_corners"
                 android:ems="10"
+                android:fontFamily="@font/open_sans"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="10dp"
@@ -49,10 +44,11 @@
                 android:id="@+id/password2"
                 android:layout_width="293dp"
                 android:layout_height="27dp"
-                android:layout_marginStart="68dp"
-                android:layout_marginTop="272dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="264dp"
                 android:background="@drawable/rounded_corners"
                 android:ems="10"
+                android:fontFamily="@font/open_sans"
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:paddingLeft="10dp"
@@ -62,13 +58,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
             <Button
                 android:id="@+id/signIn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="154dp"
                 android:layout_marginTop="340dp"
                 android:layout_marginEnd="152dp"
+                android:backgroundTint="#18ffff"
+                android:fontFamily="@font/open_sans"
                 android:text="@string/sign_in"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.946"
@@ -79,12 +77,13 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="428dp"
+                android:layout_marginTop="432dp"
+                android:fontFamily="@font/open_sans_light"
                 android:text="If you do not have an account, register below"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.495"
+                app:layout_constraintHorizontal_bias="0.489"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -92,12 +91,15 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="50dp"
+                android:fontFamily="@font/open_sans_light"
                 android:text="Login to your account"
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_bias="0.572"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -106,11 +108,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="154dp"
-                android:layout_marginTop="504dp"
+                android:layout_marginTop="500dp"
+                android:layout_marginEnd="152dp"
+                android:backgroundTint="#18ffff"
+                android:fontFamily="@font/open_sans"
                 android:onClick="Complete"
                 android:text="Register"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.047"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
             <!--End of regular content -->
