--- a/app/src/main/res/layout/activity_registering.xml
+++ b/app/src/main/res/layout/activity_registering.xml
@@ -16,12 +16,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <Button
             android:id="@+id/register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="412dp"
+            android:layout_marginTop="408dp"
             android:layout_marginEnd="152dp"
+            android:fontFamily="@font/open_sans"
             android:text="@string/register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -32,11 +34,12 @@
             android:id="@+id/password"
             android:layout_width="293dp"
             android:layout_height="27dp"
-            android:layout_marginStart="64dp"
-            android:layout_marginTop="292dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="296dp"
             android:autofillHints="emailAddress"
             android:background="@drawable/rounded_corners"
             android:ems="10"
+            android:fontFamily="@font/open_sans"
             android:hint="Password"
             android:inputType="textPassword"
             android:paddingLeft="10dp"
@@ -50,11 +53,12 @@
             android:id="@+id/email"
             android:layout_width="293dp"
             android:layout_height="27dp"
-            android:layout_marginStart="64dp"
+            android:layout_marginStart="56dp"
             android:layout_marginTop="224dp"
             android:autofillHints="emailAddress"
             android:background="@drawable/rounded_corners"
             android:ems="10"
+            android:fontFamily="@font/open_sans"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:paddingLeft="10dp"
@@ -68,13 +72,15 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="50dp"
+            android:fontFamily="@font/open_sans_light"
             android:text="@string/register"
             android:textColor="@color/white"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -82,13 +88,15 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="132dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="136dp"
+            android:layout_marginEnd="50dp"
+            android:fontFamily="@font/open_sans"
             android:text="Setup your account to login and fill in your details"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
