--- a/app/src/main/res/layout/activity_step3.xml
+++ b/app/src/main/res/layout/activity_step3.xml
@@ -57,7 +57,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:id="@+id/textView23"
+        android:id="@+id/textView4"
         android:layout_width="326dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -67,6 +67,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="468dp"
         android:layout_marginEnd="32dp"
+        android:visibility="gone"
         android:text="Finally, you will be then taken to the camera where you can document the damage, if any, to the vehicles and save them for the report"
         android:textColor="@color/white"
         android:textSize="20dp"
@@ -76,7 +77,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/textView2"
         android:layout_width="328dp"
         android:layout_height="134dp"
         android:layout_alignParentStart="true"
@@ -86,6 +87,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="192dp"
         android:layout_marginEnd="32dp"
+        android:visibility="gone"
         android:text="This step will have you enter in the other driver's information that you got into an accident with, and you have the option to import yours from your profile."
         android:textColor="@color/white"
         android:textSize="20dp"
@@ -95,7 +97,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView22"
+        android:id="@+id/textView3"
         android:layout_width="326dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -108,13 +110,14 @@
         android:text="After, you will be taken to a maps screen where you will enter in your location, which should be the site of the accident"
         android:textColor="@color/white"
         android:textSize="20dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textView1"
         android:layout_width="326dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -124,6 +127,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="32dp"
+        android:visibility="visible"
         android:text="Once you are safe and out of the way of traffic, you should exchange information with the other driver."
         android:textColor="@color/white"
         android:textSize="20dp"
@@ -133,7 +137,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView25"
+        android:id="@+id/textView5"
         android:layout_width="116dp"
         android:layout_height="42dp"
         android:layout_alignParentStart="true"
@@ -142,6 +146,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="131dp"
+        android:visibility="gone"
         android:text="Step 3"
         android:textColor="@color/white"
         android:textSize="34sp"
