Added ICE contact to registration; updated all 3 profile pages to edit text on click; adjusted background and toolbar menu colors

--- a/app/src/main/res/layout/activity_final_check.xml
+++ b/app/src/main/res/layout/activity_final_check.xml
@@ -193,6 +193,16 @@
                         android:textSize="25sp" />
 
                     <TextView
+                        android:id="@+id/iceContact"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/Type"
+                        android:layout_marginTop="50dp"
+                        android:text="  14"
+                        android:textColor="@color/white"
+                        android:textSize="25sp" />
+
+                    <TextView
                         android:id="@+id/reportNameTv2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -321,6 +331,18 @@
                         android:layout_marginTop="-75dp"
                         android:layout_marginEnd="-2dp"
                         android:text="Vehicle Type"
+                        android:textColor="#FFD700"
+                        android:textSize="25sp" />
+
+                    <TextView
+                        android:id="@+id/reportNameTv15"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/Type"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="-2dp"
+                        android:text="Emergency Contact Phone Number"
                         android:textColor="#FFD700"
                         android:textSize="25sp" />
 
