--- a/app/src/main/res/layout/activity_drive_registration.xml
+++ b/app/src/main/res/layout/activity_drive_registration.xml
@@ -22,14 +22,31 @@
                 android:layout_height="match_parent">
 
 
-
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/relative2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     >
 
+
+                    <EditText
+                        android:id="@+id/icePhone"
+                        android:layout_width="293dp"
+                        android:layout_height="27dp"
+                        android:layout_marginStart="56dp"
+                        android:layout_marginTop="368dp"
+                        android:autofillHints="phone"
+                        android:background="@drawable/rounded_corners"
+                        android:ems="10"
+                        android:hint="Emergency Contact Phone Num."
+                        android:inputType="phone"
+                        android:maxLength="10"
+                        android:paddingLeft="10dp"
+                        android:textColorHint="@color/gray"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <EditText
                         android:id="@+id/driveLicence"
@@ -142,7 +159,7 @@
                         android:id="@+id/saveInsuranceInfo"
                         android:layout_width="179dp"
                         android:layout_height="55dp"
-                        android:layout_marginTop="376dp"
+                        android:layout_marginTop="450dp"
                         android:layout_marginEnd="116dp"
                         android:text=" NEXT"
                         app:layout_constraintEnd_toEndOf="parent"
