--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    android:background="@color/background"
+    android:background="@color/blue"
     tools:context=".Home">
 
     <LinearLayout
@@ -24,19 +24,20 @@
                 android:id="@+id/greeting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:layout_marginTop="80dp"
                 android:text="Welcome!"
+                android:textColor="@color/white"
                 android:textSize="28sp"
-                app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/step_by_step"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:text="Report Accident(Step-By-Step)"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="80dp"
                 android:onClick="onClick"
                 app:layout_constraintTop_toBottomOf="@id/greeting"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -47,9 +48,8 @@
                 android:layout_width="140dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="40dp"
-                android:text="Information\n Exchange"
+                android:text="Information Exchange"
                 android:onClick="onClick"
-                android:backgroundTint="@color/logo"
                 app:layout_constraintTop_toBottomOf="@id/step_by_step"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
@@ -58,10 +58,8 @@
                 android:id="@+id/handbook"
                 android:layout_width="140dp"
                 android:layout_height="60dp"
-                android:layout_marginTop="25dp"
                 android:onClick="onClick"
                 android:text="Handbook"
-                android:backgroundTint="@color/logo"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/info_exchange" />
@@ -73,7 +71,6 @@
                 android:layout_marginTop="25dp"
                 android:text="View Reports"
                 android:onClick="onClick"
-                android:backgroundTint="@color/logo"
                 app:layout_constraintTop_toBottomOf="@id/handbook"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
