--- a/app/src/main/res/layout/activity_profile_insurance.xml
+++ b/app/src/main/res/layout/activity_profile_insurance.xml
@@ -16,161 +16,158 @@
 
         <include
             layout="@layout/main_toolbar"/>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ProfileInsurance"
-    android:background="@color/background">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ProfileInsurance"
+            android:background="@color/background">
 
 
+            <Switch
+                android:id="@+id/editable"
+                android:layout_width="76dp"
+                android:layout_height="47dp"
+                android:layout_marginEnd="8dp"
+                android:onClick="updateText"
+                android:text="@string/editLink"
+                android:textColor="@color/logo"
+                android:textSize="14sp"
+                android:checked="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/account_ic" />
 
+            <TextView
+                android:id="@+id/header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginTop="48dp"
+                android:text="INSURANCE INFORMATION"
+                android:textColor="@color/white"
+                android:textSize="22dp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/logo" />
 
-    <Switch
-        android:id="@+id/editable"
-        android:layout_width="76dp"
-        android:layout_height="47dp"
-        android:layout_marginEnd="8dp"
-        android:onClick="updateText"
-        android:text="@string/editLink"
-        android:textColor="@color/logo"
-        android:textSize="14sp"
-        android:checked="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account_ic" />
+            <TextView
+                android:id="@+id/providerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginTop="40dp"
+                android:text="Insurance Provider"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/header" />
 
-    <TextView
-        android:id="@+id/header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="48dp"
-        android:text="INSURANCE INFORMATION"
-        android:textColor="@color/white"
-        android:textSize="22dp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logo" />
+            <EditText
+                android:id="@+id/providerEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:enabled="false"
+                android:layout_marginLeft="32dp"
+                android:layout_marginEnd="32dp"
+                android:background="@drawable/rounded_corners"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/providerText" />
 
-    <TextView
-        android:id="@+id/providerText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="40dp"
-        android:text="Insurance Provider"
-        android:textColor="@color/white"
-        android:textSize="18dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header" />
+            <TextView
+                android:id="@+id/policyNoText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginTop="40dp"
+                android:text="Policy/Account Number"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/providerEdit" />
 
-    <EditText
-        android:id="@+id/providerEdit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:enabled="false"
-        android:layout_marginLeft="32dp"
-        android:layout_marginEnd="32dp"
-        android:textColor="@color/gray"
-        android:background="@drawable/rounded_corners"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/providerText" />
+            <EditText
+                android:id="@+id/policyNoEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginTop="4dp"
+                android:enabled="false"
+                android:textSize="18dp"
+                android:background="@drawable/rounded_corners"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/policyNoText" />
 
-    <TextView
-        android:id="@+id/policyNoText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="40dp"
-        android:text="Policy/Account Number"
-        android:textColor="@color/white"
-        android:textSize="18dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/providerEdit" />
+            <TextView
+                android:id="@+id/accHolderText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginTop="40dp"
+                android:text="Policy/Account Holder"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/policyNoEdit" />
 
-    <EditText
-        android:id="@+id/policyNoEdit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="4dp"
-        android:enabled="false"
-        android:textSize="18dp"
-        android:textColor="@color/gray"
-        android:background="@drawable/rounded_corners"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/policyNoText" />
+            <EditText
+                android:id="@+id/accHolderEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginTop="4dp"
+                android:enabled="false"
+                android:textSize="18dp"
+                android:background="@drawable/rounded_corners"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/accHolderText" />
 
-    <TextView
-        android:id="@+id/accHolderText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="40dp"
-        android:text="Policy/Account Holder"
-        android:textColor="@color/white"
-        android:textSize="18dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/policyNoEdit" />
+            <Button
+                android:id="@+id/accessProfile"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="45dp"
+                android:layout_marginTop="44dp"
+                android:backgroundTint="@color/logo"
+                android:onClick="edit_profile"
+                android:text="Edit Profile"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/accHolderEdit" />
 
-    <EditText
-        android:id="@+id/accHolderEdit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="4dp"
-        android:enabled="false"
-        android:textSize="18dp"
-        android:textColor="@color/gray"
-        android:background="@drawable/rounded_corners"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/accHolderText" />
+            <Button
+                android:id="@+id/accessVehicles"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="44dp"
+                android:layout_marginEnd="45dp"
+                android:backgroundTint="@color/logo"
+                android:onClick="edit_vehicle"
+                android:text="Edit Vehicles"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.188"
+                app:layout_constraintStart_toEndOf="@id/accessProfile"
+                app:layout_constraintTop_toBottomOf="@id/accHolderEdit" />
 
-    <Button
-        android:id="@+id/accessProfile"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="44dp"
-        android:backgroundTint="@color/logo"
-        android:onClick="edit_profile"
-        android:text="Edit Profile"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/accHolderEdit" />
+            <Button
+                android:id="@+id/save"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:onClick="save"
+                android:text="Save"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/accessProfile"
+                app:layout_constraintVertical_bias="0.474" />
 
-    <Button
-        android:id="@+id/accessVehicles"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="45dp"
-        android:backgroundTint="@color/logo"
-        android:onClick="edit_vehicle"
-        android:text="Edit Vehicles"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.188"
-        app:layout_constraintStart_toEndOf="@id/accessProfile"
-        app:layout_constraintTop_toBottomOf="@id/accHolderEdit" />
-
-    <Button
-        android:id="@+id/save"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:onClick="save"
-        android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/accessProfile"
-        app:layout_constraintVertical_bias="0.474" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
     <RelativeLayout
